# LFP_P2_1S2026_202403125

./: .gitignore  README.md
Proyecto2/: README.md
Proyecto2/docs/: ManualTecnico.md  ManualUsuario.md
Proyecto2/examples/: proyecto_lfp.task  sprint_planning.task
Proyecto2/src/: CMakeLists.txt
Proyecto2/src/core/: BoardModel.h  ErrorManager.cpp  ErrorManager.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  ParseTree.h  ReportGenerator.cpp  ReportGenerator.h  SyntaxAnalyzer.cpp  SyntaxAnalyzer.h  Token.cpp  Token.h
Proyecto2/src/gui/: MainWindow.cpp  MainWindow.h  main.cpp
Proyecto2/tests/: 02_valido_minimo.task  03_error_lexico_caracter.task  04_error_lexico_cadena_sin_cerrar.task  05_error_lexico_fecha_invalida.task  06_error_sintactico_falta_dospuntos.task  07_error_sintactico_llave_sin_cerrar.task  08_error_sintactico_atributo_desconocido.task  09_multiples_errores.task  10_caso_borde_columna_vacia.task  README.md
